fix: enable csrf token repository and java17 compatibility
Co-authored-by: spacedwog <152028848+spacedwog@users.noreply.github.com>